<resources>
    <string name="app_name">Expense_Manager</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>

    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
<!--    <string name="dashboard">DashBoard</string>-->
<!--    <string name="income">Income</string>-->
    <string name="expense">Expense</string>
    <string name="expense_manager">Expense Manager</string>
    <string name="dashboard">DashBoard</string>
    <string name="income">Income</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    <string name="dashboard">DashBoard</string>-->
<!--    <string name="income">Income</string>-->
<!--    <string name="expense">Expense</string>-->
<!--    <string name="income">Income</string>-->
<!--    <string name="expense">Expense</string>-->
    <string name="add_expense">add_expense</string>
<!--    <string name="expense">Expense</string>-->
<!--    <string name="income">Income</string>-->
    <string name="add_income">add_income</string>
    <string name="add_main">add_main</string>
    <string name="amount">AMOUNT</string>
    <string name="save">Save</string>
    <string name="image">image</string>

</resources>