<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashBoardFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="5dp"
        android:elevation="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/income" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#8B0000"
                        android:text="@string/expense" />

                </RelativeLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"

                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/income_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="0000.00" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/expense_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#8B0000"
                        android:text="0000.00" />

                </RelativeLayout>




            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Income:"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:padding="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/recycler_income"
                        android:layout_height="200dp">


                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Expense:"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:padding="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_expense"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">


                    </androidx.recyclerview.widget.RecyclerView>






                </LinearLayout>


            </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="160dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="@color/nav_header"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:id="@+id/expense_ft_text"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/expense_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#07bca4"
                android:elevation="6dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_expense" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="90dp"

            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@color/white"
                android:padding="5dp"
                android:background="@color/nav_header"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:id="@+id/income_ft_text"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_Ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#1ce10a"
                android:elevation="6dp"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"
                android:contentDescription="@string/add_income" />




        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_main_plus_btn"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom|end"
            android:backgroundTint="#6A1B9A"
            app:fabSize="normal"
            android:src="@drawable/income"
            android:contentDescription="@string/add_main" />





    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>